--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 div{
     width: 100px;
     height: 100px;
-    background: pink;
+    background: red;
     color: white;
     text-align: center;
     line-height: 100px;
